--- a/FarseerProjectDesktop/FarseerProjectDesktop/FarseerProjectDesktop.csproj
+++ b/FarseerProjectDesktop/FarseerProjectDesktop/FarseerProjectDesktop.csproj
@@ -128,9 +128,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Screens\GameScreen.cs" />
-    <Compile Include="Screens\GameScreen.Generated.cs">
-      <DependentUpon>GameScreen.cs</DependentUpon>
+    <Compile Include="Screens\SimpleCollisionScreen.cs" />
+    <Compile Include="Screens\SimpleCollisionScreen.Generated.cs">
+      <DependentUpon>SimpleCollisionScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\StackingScreen.cs" />
+    <Compile Include="Screens\StackingScreen.Generated.cs">
+      <DependentUpon>StackingScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Setup\CameraSetup.cs" />
     <Compile Include="StateInterpolation\Back.cs" />
